Docs: Update Jujutsu Scroll with Type Casting and Math functions

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <meta property="og:title" content="Gojo Lang IDE - Kendi Dilini Yaz!" />
+    <meta property="og:title" content="Gojo Lang IDE" />
     <meta property="og:description" content="Jujutsu Kaisen efektleriyle güçlendirilmiş, tarayıcı tabanlı Python/Gojo editörü. Hemen dene!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://gojo-lang-ide.netlify.app/" />
