tekil kullanıcı sayısı, github, feedback kutusu eklendi. site google search'a tanıtıldı.

--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,11 @@
     <meta name="twitter:title" content="Gojo Lang IDE" />
     <meta name="twitter:description" content="Jujutsu Kaisen temalı kodlama deneyimi." />
     <meta name="twitter:image" content="%PUBLIC_URL%/preview.png" />
+    
 
     <title>Gojo Lang IDE</title>
-    
+    <meta name="keywords" content="Gojo Lang, Gojo Satoru, Jujutsu Kaisen, JJK, Interpreter, Compiler, Programlama Dili, Yazılım, Python, Pyodide, React IDE, Online Compiler, Anime Coding" />
+    <meta name="google-site-verification" content="XmFbjnfwPHcHwNISejJKHecQ3HY-kW6XjN79s79-0eE" />
     <script src="https://cdn.jsdelivr.net/pyodide/v0.23.4/full/pyodide.js"></script>
   </head>
   <body>
